# makita

./: ARCH_SETUP.md  Cargo.toml  README.md  configure-device.sh  install.sh  makima.service  makita.service  setup-arch.sh  test_magnus.rb
examples/: config-keyboard.toml  config-mouse.toml  config-playstation.toml  config-ps2.toml  config-ruby.toml  config-stadia.toml  config-switch.toml  config-xbox.toml
examples/ruby_scripts/: alt_tab_combo.rb  eat_input.rb  propagate_input.rb
ruby/: event.rb  event_codes.rb  event_loop.rb  magnus_event_loop.rb  makita.rb
ruby/fiber_scheduler/: fiber_scheduler.rb  timeouts.rb
src/: active_client.rs  config.rs  event_reader.rs  magnus_ruby_runtime.rs  main.rs  ruby_runtime.rs  udev_monitor.rs  virtual_devices.rs
src/input_event_handling/: event_reader.rs  event_sender.rs  mod.rs
