[package]
name = "makita"
version = "0.10.1"
edition = "2021"

[dependencies]
evdev = { version = "0.12.1", features = ["tokio", "serde"] }
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.117"
tokio-stream = "0.1.14"
tokio-udev = "0.9.1"
swayipc-async = "2.0.2"
x11rb = "0.13.0"
toml = "0.7.3"
magnus = { version = "0.7", features = ["embed"] }
crossbeam-channel = "0.5.15"
nix = { version = "0.30.1", features = ["fs"] }
lazy_static = "1.5.0"
